--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     outline: none;
     max-width: 100%;
     font-family: Segoe UI;
+    background-color: beige;
 }
 
 .counter{
@@ -15,14 +16,19 @@
     border-bottom: 1px solid #ddd;
     padding-bottom: 30px;
 }
-
+.counter__value{
+    padding: 10px;
+}
 input{
     padding: 10px 30px;
     border: 1px solid #ddd;
     margin-bottom: 20px;
     text-align: center;
 }
-
+a{
+    text-decoration: none;
+}
+/*
 button{
     padding: 10px 30px;
     text-transform: uppercase;
@@ -30,4 +36,41 @@ button{
     background: royalblue;
     border: none;
     color: white;
-}
+  }*/
+  button {
+    padding: 8px 10px;
+    box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.5);
+    line-height: 1.25;
+    background: rgb(42, 137, 200);
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    letter-spacing: .08em;
+    text-transform: uppercase;
+    position: relative;
+    transition: background-color .6s ease;
+    overflow: hidden;
+    &:after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 0;
+      top: 50%;
+      left: 50%;
+      transform-style: flat;
+      transform: translate3d(-50%,-50%,0);
+      background: rgba(white,.1);
+      border-radius: 100%;
+      transition: width .3s ease, height .3s ease;
+    }
+    &:focus,
+    &:hover {
+        background: darken(#FC6E51,7%);
+    }
+    &:active {
+      &:after {
+        width: 200px;
+        height: 200px;
+      }
+    }
+  }
